--- a/WT-Lab/prog3.html
+++ b/WT-Lab/prog3.html
@@ -6,34 +6,33 @@
 </head>
 
 <body>
-	<p id="txt"></p>
-	<script>
-		var myVar = setInterval(Growing, 100);
-		var myVar1 = 0;
-		var i = 0;
-		function Growing() {
-			i = i + 1;
-			document.body.style.fontSize = "5px";
-			document.getElementById("txt").innerHTML = 'Text-Growing';
-			document.body.style.fontSize = parseFloat(document.body.style.fontSize) + (i * 1.0) + "px";
-			document.body.style.color = 'red';
-			if (document.body.style.fontSize == '50px') {
-				clearInterval(myVar);
-				i = 1;
-				document.body.style.color = 'blue';
-				myvar1 = setInterval(Shrinking, 100);
-			}
-		}
-		function Shrinking() {
-			document.getElementById("txt").innerHTML = 'Text-Shrinking';
-			document.body.style.fontSize = parseFloat(document.body.style.fontSize) - (i * 1.0) + "px";
-			if (document.body.style.fontSize == "5px") {
-				clearInterval(myVar1)
-				myVar = setInterval(Growing, 100);
-			}
+	<p id="demo"></p>
+	
+    	<script>
+		var var1 = setInterval(grow, 1000);
+		var fs = 5;
+		var ids = document.getElementById("demo");
+
+		function grow() {
+		    ids.innerHTML = 'TEXT GROWING';
+		    ids.setAttribute('style', "font-size:" + fs + "px; color:red;");
+		    fs += 5;
+		    if (fs >= 50) {
+			clearInterval(var1);
+			var var2 = setInterval(shrink, 1000);
+		    }
 		}
 
-	</script>
+		function shrink() {
+		    ids.innerHTML = 'TEXT SHRINKING';
+		    ids.setAttribute('style', "font-size:" + fs + "px; color:blue;");
+		    fs -= 5;
+		    if (fs === 5) {
+			clearInterval(var2);
+		    }
+		}
+
+    	</script>
 
 </body>
 
